// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElementWrapper snapshots should render ElementWrapper 1`] = `
<DocumentFragment>
  children
</DocumentFragment>
`;

exports[`ElementWrapper snapshots should render with drop anchors 1`] = `
<DocumentFragment>
  <div
    class="drop-anchors"
  >
    children
  </div>
</DocumentFragment>
`;
